--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 The goal of sealr is to provide multiple authentication and authorization strategies for [plumber](https://www.rplumber.io/) by using [filters](https://www.rplumber.io/docs/routing-and-input.html#filters). In doing so, we hope to make best practices in authentication easy to implement for the R community.
 The package is inspired by the amazing [passport.js](http://www.passportjs.org/) library for Node.js.
-The *sealr* website can be found at [https://jandix.github.io/sealr/](https://jandix.github.io/sealr/docs/sealr/).
+The *sealr* website can be found at [https://jandix.github.io/sealr/](https://jandix.github.io/sealr/).
 
 ## Disclaimer
 
